Add boxes for notes

--- a/client/components/Note.sass
+++ b/client/components/Note.sass
@@ -4,4 +4,7 @@
   background-color: #7fd5e0
   display: inline-block
   position: relative
-  // align-items: auto
+  white-space: nowrap
+  overflow: hidden
+  margin-right: 50px
+  margin-top: 50px
