--- a/client/containers/Noteboard.sass
+++ b/client/containers/Noteboard.sass
@@ -1,3 +1,17 @@
 .notesboard
     width: 100%
-  
+
+
+.categories
+  position: fixed
+  top: 100px
+  left: 0px
+  background-color: #b1b9c6
+  width: 160
+  height: 600
+
+.notes
+    position: absolute
+    top: 1px
+    left: 300px
+    background-color: #fffccc
