Fix commit again

--- a/client/components/Note.sass
+++ b/client/components/Note.sass
@@ -1,7 +1,7 @@
 .note
   width: 190
   height: 190
-  background-color: #7fd5e0
+  background-color: #fffc72
   display: inline-block
   position: relative
   white-space: nowrap
