--- a/client/containers/Noteboard.sass
+++ b/client/containers/Noteboard.sass
@@ -1,17 +1,14 @@
-.notesboard
-    width: 100%
+.notesboard:nth-child(1)
+    width: 30%
 
+.notesboard:nth-child(2)
+    width: 70%
 
 .categories
-  position: fixed
-  top: 100px
-  left: 0px
-  background-color: #b1b9c6
-  width: 160
-  height: 600
+
 
 .notes
     position: absolute
     top: 1px
     left: 300px
-    background-color: #fffccc
+    background-color: #ffffff
