--- a/client/components/CreateCategory.sass
+++ b/client/components/CreateCategory.sass
@@ -17,7 +17,7 @@ form.create-category
       border: 1px solid #ccc
       color: #ccc
       border-radius: 3px
-      background-color: #fff
+      background-color: #7c7c7c
 
       &:hover
         background-color: #999
